<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="7"
    android:padding="8dp"
    android:background="@drawable/order_background"
    tools:context="edu.orangecoastcollege.cs273.vnguyen468.inandout.OrderActivity">

    <TextView
        android:id="@+id/placeAnOrderTextView"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="0"
        android:textSize="24sp"
        android:text="@string/place_an_order_text"/>

    <TextView
        android:id="@+id/doubleDoubleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:padding="10dp"
        android:text="@string/double_double_text"/>

    <TextView
        android:id="@+id/cheeseburgerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:padding="10dp"
        android:text="@string/cheeseburger_text"/>

    <TextView
        android:id="@+id/frenchFriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:padding="10dp"
        android:text="@string/french_fries_text"/>

    <TextView
        android:id="@+id/shakeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:padding="10dp"
        android:text="@string/shakes_text"/>

    <TextView
        android:id="@+id/fountainDrinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/fountain_drinks_text"/>

    <TextView
        android:id="@+id/smallDrinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:padding="10dp"
        android:text="@string/small_drink_text"/>

    <TextView
        android:id="@+id/mediumDrinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:padding="10dp"
        android:text="@string/medium_drink_text"/>

    <TextView
        android:id="@+id/largeDrinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="0"
        android:padding="10dp"
        android:text="@string/large_drink_text"/>

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_row="9"
        android:onClick="goToTotal"
        android:text="@string/place_order_button_text"/>

    <EditText
        android:id="@+id/doubleDoubleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/cheeseburgerEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/frenchFriesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/shakesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/smallDrinkEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_row="6"
        android:layout_column="1"
        android:textAlignment="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/mediumDrinkEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_row="7"
        android:layout_column="1"
        android:textAlignment="center"
        android:inputType="number"/>

    <EditText
        android:id="@+id/largeDrinkEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="1"
        android:ems="10"
        android:textAlignment="center"
        android:inputType="number"/>

</GridLayout>
