<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summary_background"
    tools:context="edu.orangecoastcollege.cs273.vnguyen468.inandout.SummaryActivity">

    <TextView
        android:id="@+id/orderTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/order_total_text"/>

    <TextView
        android:id="@+id/itemsOrderedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/orderTotalTextView"
        android:layout_alignStart="@+id/orderTotalTextView"
        android:layout_below="@+id/orderTotalTextView"
        android:layout_marginTop="30dp"
        android:text="@string/items_ordered_text"/>

    <TextView
        android:id="@+id/subTotalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/itemsOrderedTextView"
        android:layout_alignStart="@+id/itemsOrderedTextView"
        android:layout_below="@+id/itemsOrderedTextView"
        android:text="@string/subtotal_text"/>

    <TextView
        android:id="@+id/taxTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subTotalTextView"
        android:layout_alignStart="@+id/subTotalTextView"
        android:layout_below="@+id/subTotalTextView"
        android:text="@string/tax_text"/>

    <Button
        android:id="@+id/startNewOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/taxTextView"
        android:layout_alignStart="@+id/taxTextView"
        android:layout_centerVertical="true"
        android:onClick="startNewOrder"
        android:text="@string/start_new_order_button"
        android:textSize="10sp"/>
</RelativeLayout>
